--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 /*Обнуление*/
+
 * {
   padding: 0;
   margin: 0;
   border: 0;
 }
+
 *,
 *:before,
 *:after {
@@ -11,10 +13,12 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 :focus,
 :active {
   outline: none;
 }
+
 a:focus,
 a:active {
   outline: none;
@@ -38,6 +42,7 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+
 input,
 button,
 textarea {
@@ -47,23 +52,29 @@ textarea {
 input::-ms-clear {
   display: none;
 }
+
 button {
   cursor: pointer;
 }
+
 button::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
+
 a,
 a:visited {
   text-decoration: none;
 }
+
 a:hover {
   text-decoration: none;
 }
+
 ul li {
   list-style: none;
 }
+
 img {
   vertical-align: top;
 }
@@ -77,6 +88,7 @@ h6 {
   font-size: inherit;
   font-weight: 400;
 }
+
 /* -------- */
 
 :root {
@@ -121,7 +133,8 @@ h6 {
 }
 
 html {
-  scroll-behavior: smooth; /* свойство scroll-behavior не наследуется, применяется к прокручиваемым блокам */
+  scroll-behavior: smooth;
+  /* свойство scroll-behavior не наследуется, применяется к прокручиваемым блокам */
 }
 
 header {
@@ -247,12 +260,11 @@ a:visited {
 }
 
 .block {
-  min-height: calc(1230px * var(--size-coeff));
+  /* min-height: calc(1230px * var(--size-coeff)); */
 }
 
 .block-content {
   max-width: calc(var(--total-width) * var(--size-coeff));
-  min-height: 1186px;
   margin: auto;
   padding: 50px 20px;
 }
@@ -261,17 +273,20 @@ a:visited {
   font-family: "Montserrat-Black";
   font-size: calc(64px * var(--size-coeff));
   text-align: center;
+  padding-bottom: calc(40px * var(--size-coeff));
 }
 
 .block-content-text {
   font-family: "Montserrat-Regular";
   font-size: calc(36px * var(--size-coeff));
   text-align: center;
+  padding: calc(50px * var(--size-coeff));
+  line-height: calc(40px * var(--size-coeff));
 }
 
-.photo-for-documents-cards {
+.block-cards {
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   flex-wrap: wrap;
   gap: calc(100px * var(--size-coeff));
   width: 100%;
@@ -283,11 +298,11 @@ a:visited {
   height: calc(450px * var(--size-coeff));
   position: relative;
   margin: auto;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: calc(20px * var(--size-coeff));
+  gap: calc(20px * var(--size-coeff)); */
 }
 
 .photo-for-documents-card-img {
@@ -415,15 +430,126 @@ a:visited {
   line-height: calc(50px * var(--size-coeff));
 }
 
-.recovery{
-  background: #DB8181;
+.recovery {
+  background: #db8181;
 }
 
-.recovery-img{
+.recovery-img {
   margin: auto;
   display: block;
 }
 
-.polygraphy{
-  background: #56BC97;
+.polygraphy {
+  background: #56bc97;
+}
+
+.polygraphy-card {
+  width: calc(544px * var(--size-coeff));
+  height: calc(653px * var(--size-coeff));
+  position: relative;
+  margin: auto;
+}
+
+.polygraphy-card-img {
+  width: 100%;
+  height: 100%;
+}
+
+.polygraphy-card-text {
+  width: 100%;
+  height: calc(143px * var(--size-coeff));
+  /* background: chartreuse; */
+  position: absolute;
+  bottom: calc(5px * var(--size-coeff));
+  text-align: center;
+  /* left: calc(45px * var(--size-coeff)); */
+  font-family: "MarckScript-Regular";
+  font-size: calc(50px * var(--size-coeff));
+}
+
+.accessories {
+  background: #868bef;
+}
+
+.accessories-card {
+  width: calc(380px * var(--size-coeff));
+  height: calc(455px * var(--size-coeff));
+  position: relative;
+  margin: auto;
+}
+
+.accessories-card-img {
+  width: 100%;
+  height: 100%;
+}
+
+.accessories-card-text {
+  width: 100%;
+  height: calc(100px * var(--size-coeff));
+  /* background: chartreuse; */
+  position: absolute;
+  bottom: calc(1px * var(--size-coeff));
+  text-align: center;
+  /* left: calc(45px * var(--size-coeff)); */
+  font-family: "MarckScript-Regular";
+  font-size: calc(50px * var(--size-coeff));
+}
+
+.contacts {
+  background: #e4be72;
+}
+
+.contacts-rows {
+  font-size: calc(36px * var(--size-coeff));
+  font-family: "Montserrat-Regular";
+}
+
+.contacts-row {
+    padding-bottom: calc(20px * var(--size-coeff));
+}
+
+.contacts-img {
+  height: calc(36px * var(--size-coeff));
+  width: calc(36px * var(--size-coeff));
+}
+
+.road {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+.contacts-card {
+  display: inline-block;
+  position: relative;
+  width: calc(600px * var(--size-coeff));
+  height: calc(700px * var(--size-coeff));
+}
+
+
+
+.contacts-text {
+  font-size: calc(36px * var(--size-coeff));
+  font-family: "Montserrat-Regular";
+  padding: 50px 0;
+}
+
+.contacts-card img {
+    display: inline-block;
+    width: calc(600px * var(--size-coeff));
+    height: calc(700px * var(--size-coeff));
+  }
+
+.contacts-card-text {
+  width: 200px;
+  /* width: 20px; */
+  line-height: calc(40px * var(--size-coeff));
+  height: calc(120px * var(--size-coeff));
+  /* background: chartreuse; */
+  position: absolute;
+  bottom: calc(5px * var(--size-coeff));
+  text-align: center;
+  /* left: calc(45px * var(--size-coeff)); */
+  font-family: "MarckScript-Regular";
+  font-size: calc(50px * var(--size-coeff));
 }
