--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ header {
   position: relative;
   top: 10%;
   margin: auto;
-  padding: 0 20px;
+  padding: 0 calc(20px * var(--size-coeff));
 }
 
 .menu {
@@ -160,10 +160,14 @@ header {
   font-family: "Montserrat-Bold";
   font-size: calc(18px * var(--size-coeff));
   padding-top: calc(20px * var(--size-coeff));
-  margin-right: 200px;
-  gap: 20px;
+  margin-right: calc(200px * var(--size-coeff));
+  gap: calc(20px * var(--size-coeff));
 
   /* flex-wrap: wrap; */
+}
+
+.menu-burger{
+    display: none;
 }
 
 a,
@@ -176,7 +180,7 @@ a:visited {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 10px;
+  gap: calc(10px * var(--size-coeff));
 }
 
 .menu div a {
@@ -270,7 +274,7 @@ a:visited {
 .block-content {
   max-width: calc(var(--total-width) * var(--size-coeff));
   margin: auto;
-  padding: 50px 20px;
+  padding: calc(50px * var(--size-coeff)) calc(20px * var(--size-coeff));
 }
 
 .block-content-title {
@@ -340,18 +344,18 @@ a:visited {
   flex-wrap: wrap;
   gap: calc(20px * var(--size-coeff));
   /* background: chartreuse; */
-  padding-top: 50px;
+  padding-top: calc(50px * var(--size-coeff));
 }
 
 .print-content-top-text {
   text-indent: 2em;
   font-family: "Montserrat-Regular";
   font-size: calc(36px * var(--size-coeff));
-  max-width: 720px;
-  min-height: 460px;
-  line-height: 40px;
-  padding-top: 50px;
-  padding-left: 50px;
+  max-width: calc(720px * var(--size-coeff));
+  min-height: calc(460px * var(--size-coeff));
+  line-height: calc(40px * var(--size-coeff));
+  padding-top: calc(50px * var(--size-coeff));
+  padding-left: calc(50px * var(--size-coeff));
   /* text-align: justify; */
   /* background: chartreuse; */
 }
@@ -388,18 +392,18 @@ a:visited {
   flex-wrap: wrap;
   gap: calc(20px * var(--size-coeff));
   /* background: chartreuse; */
-  padding-top: 50px;
+  padding-top: calc(50px * var(--size-coeff));
 }
 
 .print-content-bottom-text {
   text-indent: 2em;
   font-family: "Montserrat-Regular";
   font-size: calc(36px * var(--size-coeff));
-  max-width: 720px;
-  min-height: 460px;
-  line-height: 40px;
-  padding-top: 50px;
-  padding-left: 50px;
+  max-width: calc(720px * var(--size-coeff));
+  min-height: calc(460px * var(--size-coeff));
+  line-height: calc(40px * var(--size-coeff));
+  padding-top: calc(50px * var(--size-coeff));
+  padding-left: calc(50px * var(--size-coeff));
   /* text-align: justify; */
   /* background: chartreuse; */
 }
@@ -441,6 +445,8 @@ a:visited {
 .recovery-img {
   margin: auto;
   display: block;
+  width: calc(1082px * var(--size-coeff));
+  height: calc(815px * var(--size-coeff));
 }
 
 .polygraphy {
@@ -531,7 +537,7 @@ a:visited {
 .contacts-text {
   font-size: calc(36px * var(--size-coeff));
   font-family: "Montserrat-Regular";
-  padding: 50px 0;
+  padding: calc(50px * var(--size-coeff)) 0;
 }
 
 .contacts-card img {
@@ -549,7 +555,7 @@ a:visited {
   font-size: calc(50px * var(--size-coeff));
   bottom: calc(20px * var(--size-coeff));
   text-align: center;
-  padding-top: 20px;
+  padding-top: calc(20px * var(--size-coeff));
 }
 
 footer {
@@ -565,5 +571,5 @@ footer p {
   margin: auto;
   /* background: wheat; */
   text-align: center;
-  line-height: 80px;
+  line-height: calc(80px * var(--size-coeff));
 }
