--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ header {
   width: 100%;
   background: black;
   top: 0px;
+  z-index: 100;
 }
 
 .header-content {
@@ -166,10 +167,6 @@ header {
   /* flex-wrap: wrap; */
 }
 
-.menu-burger{
-    display: none;
-}
-
 a,
 a:visited {
   text-decoration: none;
@@ -185,6 +182,47 @@ a:visited {
 
 .menu div a {
   display: block;
+}
+
+.burger {
+  /* overflow-y: hidden; */
+  position: fixed;
+  /* display: none; */
+  width: 300px;
+  /* height: 180px; */
+  background: #000000;
+  /* position: absolute; */
+  top: 0;
+  left: -300px;
+  transition: 0.5s;
+  border-bottom-right-radius: 40px;
+}
+
+.burger-img {
+  display: none;
+  filter: invert(1);
+  width: 40px;
+  height: 40px;
+  position: fixed;
+}
+
+.burger-cross {
+  filter: invert(1);
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.burger-menu {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  font-family: "Montserrat-Bold";
+  font-size: calc(30px * var(--size-coeff));
+  gap: calc(40px * var(--size-coeff));
+  padding: calc(40px * var(--size-coeff));
 }
 
 .logo {
@@ -261,6 +299,10 @@ a:visited {
   display: block;
   max-width: calc(650px * var(--size-coeff));
   height: calc(910px * var(--size-coeff));
+}
+
+.about-us-planshet {
+  display: none;
 }
 
 .photo-for-documents {
@@ -370,6 +412,7 @@ a:visited {
 .print-content-top-card-img {
   width: calc(570px * var(--size-coeff));
   height: calc(690px * var(--size-coeff));
+  z-index: 10;
 }
 
 .print-content-top-card-text {
@@ -572,4 +615,87 @@ footer p {
   /* background: wheat; */
   text-align: center;
   line-height: calc(80px * var(--size-coeff));
+}
+
+@media (max-width: 950px) {
+  .about-us-content-main {
+    margin-top: calc(130px * var(--size-coeff));
+  }
+}
+
+@media (max-width: 673px) {
+  .about-us-content {
+    padding-top: calc(40px * var(--size-coeff));
+  }
+  .about-us-content-main {
+    margin-top: calc(40px * var(--size-coeff));
+    margin: auto;
+  }
+
+  .about-us-planshet {
+    display: block;
+    max-width: calc(900px * var(--size-coeff));
+    height: calc(600px * var(--size-coeff));
+  }
+
+  .about-us-content-main-text1{
+      text-align: center;
+  }
+
+  .services-view {
+      margin: auto;
+  }
+
+  .about-us-img {
+    display: none;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .burger-img {
+    display: block;
+  }
+
+  .block-cards {
+    display: block;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+  }
+  
+  .photo-for-documents-card {
+    display: inline-block;
+    position: relative;
+    width: calc(330px * var(--size-coeff));
+    height: calc(450px * var(--size-coeff));
+  }
+
+  .photo-for-documents-card-img{
+    width: calc(330px * var(--size-coeff));
+    height: calc(450px * var(--size-coeff));
+  }
+
+/*   
+.block-cards {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: none;
+    gap: calc(100px * var(--size-coeff));
+    width: 100%;
+    height: 100%;
+  }
+  
+  .photo-for-documents-card {
+    width: calc(330px * var(--size-coeff));
+    height: calc(450px * var(--size-coeff));
+    position: relative;
+    margin: auto;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: calc(20px * var(--size-coeff)); */
+  } */
 }
