--- a/style.css
+++ b/style.css
@@ -305,6 +305,13 @@ a:visited {
   display: none;
 }
 
+.about-us-mobile{
+    display: none;
+    width: 250px;
+    height: 280px;
+    margin: auto;
+}
+
 .photo-for-documents {
   background: #bd87e7;
 }
@@ -387,6 +394,7 @@ a:visited {
   gap: calc(20px * var(--size-coeff));
   /* background: chartreuse; */
   padding-top: calc(50px * var(--size-coeff));
+  margin: auto;
 }
 
 .print-content-top-text {
@@ -394,10 +402,10 @@ a:visited {
   font-family: "Montserrat-Regular";
   font-size: calc(36px * var(--size-coeff));
   max-width: calc(720px * var(--size-coeff));
-  min-height: calc(460px * var(--size-coeff));
+  /* min-height: calc(460px * var(--size-coeff)); */
   line-height: calc(40px * var(--size-coeff));
-  padding-top: calc(50px * var(--size-coeff));
-  padding-left: calc(50px * var(--size-coeff));
+  padding-top: calc(50px * var(--size-coeff)); 
+  /* padding-left: calc(50px * var(--size-coeff));  */
   /* text-align: justify; */
   /* background: chartreuse; */
 }
@@ -412,7 +420,7 @@ a:visited {
 .print-content-top-card-img {
   width: calc(570px * var(--size-coeff));
   height: calc(690px * var(--size-coeff));
-  z-index: 10;
+  /* z-index: 10; */
 }
 
 .print-content-top-card-text {
@@ -436,6 +444,7 @@ a:visited {
   gap: calc(20px * var(--size-coeff));
   /* background: chartreuse; */
   padding-top: calc(50px * var(--size-coeff));
+  margin: auto;
 }
 
 .print-content-bottom-text {
@@ -488,8 +497,8 @@ a:visited {
 .recovery-img {
   margin: auto;
   display: block;
-  width: calc(1082px * var(--size-coeff));
-  height: calc(815px * var(--size-coeff));
+  max-width: calc(1082px * var(--size-coeff));
+  /* max-height: calc(815px * var(--size-coeff)); */
 }
 
 .polygraphy {
@@ -623,7 +632,7 @@ footer p {
   }
 }
 
-@media (max-width: 673px) {
+@media (max-width: 768px) {
   .about-us-content {
     padding-top: calc(40px * var(--size-coeff));
   }
@@ -677,25 +686,60 @@ footer p {
     height: calc(450px * var(--size-coeff));
   }
 
-/*   
-.block-cards {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: none;
-    gap: calc(100px * var(--size-coeff));
-    width: 100%;
-    height: 100%;
-  }
-  
-  .photo-for-documents-card {
-    width: calc(330px * var(--size-coeff));
-    height: calc(450px * var(--size-coeff));
+  .polygraphy-card{
+    display: inline-block;
     position: relative;
-    margin: auto;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: calc(20px * var(--size-coeff)); */
-  } */
+    width: calc(600px * var(--size-coeff));
+    height: calc(700px * var(--size-coeff));
+  }
+
+  .polygraphy-card-img{
+    width: calc(600px * var(--size-coeff));
+    height: calc(700px * var(--size-coeff));
+  }
+
+  .polygraphy-card-text {
+  font-size: calc(55px * var(--size-coeff));
+}
+
+.accessories-card {
+    display: inline-block;
+    position: relative;
+    width: calc(600px * var(--size-coeff));
+    height: calc(700px * var(--size-coeff));
+  }
+
+  .accessories-card-img{
+    width: calc(600px * var(--size-coeff));
+    height: calc(700px * var(--size-coeff));
+  }
+
+  .accessories-card-text {
+  font-size: calc(55px * var(--size-coeff));
+}
+
+  .print-content-top{
+      flex-wrap: wrap-reverse;
+      justify-content: center;
+  }
+
+  .print-content-bottom{
+    justify-content: center;
+}
+
+.recovery-img {
+    max-width: calc(700px * var(--size-coeff));
+    /* max-height: calc(815px * var(--size-coeff)); */
+  }
+}
+
+@media (max-width: 510px) {
+
+    .about-us-planshet{
+        display: none;
+    }
+    .about-us-mobile{
+        display: block;
+        
+    }
 }
