--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ a:visited {
 }
 
 .about-us-content-main-text2 {
+  text-indent: 2em;
   font-family: "Montserrat-Regular";
   font-size: calc(30px * var(--size-coeff));
   line-height: calc(45px * var(--size-coeff));
