--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ h6 {
 :root {
   --total-width: 1540px;
   --size-coeff: 1;
+  --card-size-coeff: 0.3;
 }
 
 @font-face {
@@ -353,36 +354,36 @@ a:visited {
 }
 
 .block-long-card-img {
-  width: calc(1172px * 0.3 * var(--size-coeff));
-  height: calc(1617px * 0.3 * var(--size-coeff));
+  width: calc(1172px * var(--card-size-coeff) * var(--size-coeff));
+  height: calc(1617px * var(--card-size-coeff) * var(--size-coeff));
 }
 
 .block-card-img {
-  width: calc(1167px * 0.35 * var(--size-coeff));
-  height: calc(1401px * 0.35 * var(--size-coeff));
+  width: calc(1167px * var(--card-size-coeff) * var(--size-coeff));
+  height: calc(1401px * var(--card-size-coeff) * var(--size-coeff));
 }
 
 .block-long-card-text {
   width: 100%;
-  height: calc(162px * var(--size-coeff));
+  height: calc(540px * var(--card-size-coeff) * var(--size-coeff));
   /* background: chartreuse; */
   position: absolute;
   bottom: calc(0px * var(--size-coeff));
   text-align: center;
   font-family: "MarckScript-Regular";
-  font-size: calc(36px * var(--size-coeff));
+  font-size: calc(120px * var(--card-size-coeff) * var(--size-coeff));
   /* padding-top: 5%; */
 }
 
 .block-card-text {
   width: 100%;
-  height: calc(100px * var(--size-coeff));
+  height: calc(325px * var(--card-size-coeff) * var(--size-coeff));
   /* background: chartreuse; */
   position: absolute;
   bottom: calc(0px * var(--size-coeff));
   text-align: center;
   font-family: "MarckScript-Regular";
-  font-size: calc(36px * var(--size-coeff));
+  font-size: calc(100px * var(--card-size-coeff) * var(--size-coeff));
   /* padding-top: 5%; */
 }
 
@@ -621,6 +622,10 @@ footer p {
   .block-long-card {
     display: inline-block;
     position: relative;
+  }
+
+  :root {
+    --card-size-coeff: 0.5;
   }
 
   /* .block-card-img{
