Раздел печать фото

--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@ a:visited {
   font-size: calc(64px * var(--size-coeff));
   text-align: center;
   color: #202020;
-
+  margin-bottom: calc(100px * var(--size-coeff));;
 }
 
 .block-content-text {
@@ -379,112 +379,7 @@ a:visited {
   font-size: calc(120px * var(--card-size-coeff) * var(--size-coeff));
 }
 
-.print {
-  background: #e4a972;
-}
 
-.print-content-top {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: calc(20px * var(--size-coeff));
-  /* background: chartreuse; */
-  padding-top: calc(50px * var(--size-coeff));
-  margin: auto;
-}
-
-.print-content-top-text {
-  text-indent: 2em;
-  font-family: "Montserrat-Regular";
-  font-size: calc(36px * var(--size-coeff));
-  max-width: calc(720px * var(--size-coeff));
-  /* min-height: calc(460px * var(--size-coeff)); */
-  line-height: calc(40px * var(--size-coeff));
-  padding-top: calc(50px * var(--size-coeff));
-  /* padding-left: calc(50px * var(--size-coeff));  */
-  /* text-align: justify; */
-  /* background: chartreuse; */
-}
-
-.print-content-top-card {
-  width: calc(570px * var(--size-coeff));
-  height: calc(690px * var(--size-coeff));
-  position: relative;
-  transform: rotate(5deg);
-}
-
-.print-content-top-card-img {
-  width: calc(570px * var(--size-coeff));
-  height: calc(690px * var(--size-coeff));
-}
-
-.print-content-top-card-text {
-  width: calc(477px * var(--size-coeff));
-  height: calc(95px * var(--size-coeff));
-  position: absolute;
-  bottom: calc(35px * var(--size-coeff));
-  left: calc(45px * var(--size-coeff));
-  font-family: "MarckScript-Regular";
-  font-size: calc(50px * var(--size-coeff));
-}
-
-.print-content-top-card-text p {
-  line-height: calc(50px * var(--size-coeff));
-}
-
-.print-content-bottom {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: calc(20px * var(--size-coeff));
-  /* background: chartreuse; */
-  padding-top: calc(50px * var(--size-coeff));
-  margin: auto;
-  padding-bottom: calc(50px * var(--size-coeff));
-}
-
-.print-content-bottom-text {
-  text-indent: 2em;
-  font-family: "Montserrat-Regular";
-  font-size: calc(36px * var(--size-coeff));
-  max-width: calc(720px * var(--size-coeff));
-  min-height: calc(460px * var(--size-coeff));
-  line-height: calc(40px * var(--size-coeff));
-  padding-top: calc(50px * var(--size-coeff));
-  padding-left: calc(50px * var(--size-coeff));
-  /* text-align: justify; */
-  /* background: chartreuse; */
-}
-
-.print-content-bottom-text span {
-  font-family: "Montserrat-SemiBold";
-}
-
-.print-content-bottom-card {
-  width: calc(570px * var(--size-coeff));
-  height: calc(690px * var(--size-coeff));
-  position: relative;
-  transform: rotate(-5deg);
-}
-
-.print-content-bottom-card-img {
-  width: calc(570px * var(--size-coeff));
-  height: calc(690px * var(--size-coeff));
-}
-
-.print-content-bottom-card-text {
-  width: calc(477px * var(--size-coeff));
-  height: calc(95px * var(--size-coeff));
-  position: absolute;
-  bottom: calc(35px * var(--size-coeff));
-  left: calc(45px * var(--size-coeff));
-  font-family: "MarckScript-Regular";
-  font-size: calc(50px * var(--size-coeff));
-}
-
-.print-content-bottom-card-text p {
-  line-height: calc(50px * var(--size-coeff));
-}
 
 .recovery {
   background: #db8181;
@@ -549,7 +444,8 @@ a:visited {
 footer {
   width: 100%;
   height: calc(100px * var(--size-coeff));
-  background: rgb(34, 34, 34);
+  background: rgb(39, 39, 39);
+  /* filter: blur(0.2px); */
 }
 
 footer p {
@@ -625,15 +521,6 @@ footer p {
 
   :root {
     --card-size-coeff: 0.5;
-  }
-
-  .print-content-top {
-    flex-wrap: wrap-reverse;
-    justify-content: center;
-  }
-
-  .print-content-bottom {
-    justify-content: center;
   }
 
   .recovery-img {
