--- a/source/foto-na-dokumenty/style.css
+++ b/source/foto-na-dokumenty/style.css
@@ -4,6 +4,7 @@
   /* background: linear-gradient(to bottom, #33ccff 0%, #ffffff 100%); */
   background: linear-gradient(to bottom, #ffccff 0%, #ffcc99 100%);
   /* background: linear-gradient(to bottom, #f8c539 0%, #ffcc99 100%); */
+ /* background: url(/source/foto-na-dokumenty/img/texture-of-brown-paper.jpg) 0 0/cover no-repeat; */
 }
 
 .photo-for-documents-text{
@@ -20,4 +21,8 @@
   line-height: calc(55px * var(--size-coeff));
   color: #2d2e2e;
   margin-bottom: 30px;
+}
+
+.block-cards{
+    
 }
