--- a/style.css
+++ b/style.css
@@ -344,6 +344,7 @@ a:visited {
   gap: calc(100px * var(--size-coeff));
   width: 100%;
   height: 100%;
+  margin-bottom: calc(80px * var(--size-coeff));
 }
 
 .block-card {
