--- a/source/foto-na-dokumenty/style.css
+++ b/source/foto-na-dokumenty/style.css
@@ -3,6 +3,8 @@
   /* background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%); */
   /* background: linear-gradient(to bottom, #33ccff 0%, #ffffff 100%); */
   background: linear-gradient(to bottom, #ffccff 0%, #ffcc99 100%);
+  background: #56b5bcc9;
+
   /* background: linear-gradient(to bottom, #f8c539 0%, #ffcc99 100%); */
  /* background: url(/source/foto-na-dokumenty/img/texture-of-brown-paper.jpg) 0 0/cover no-repeat; */
 }
