--- a/common-style.css
+++ b/common-style.css
@@ -170,7 +170,7 @@ header {
 a,
 a:visited {
   text-decoration: none;
-  color: rgb(241, 237, 237);
+  /* color: rgb(241, 237, 237); */
 }
 
 .menu div {
@@ -182,12 +182,13 @@ a:visited {
 
 .menu div a {
   display: block;
+  color: rgb(241, 237, 237);
 }
 
 .burger {
   position: fixed;
   /* display: none; */
-  width: 200px;
+  min-width: 200px;
   background: #000000;
   top: 0;
   left: -300px;
@@ -224,6 +225,9 @@ a:visited {
   gap: calc(40px * var(--size-coeff));
   padding: calc(40px * var(--size-coeff));
 }
+.burger-menu a{
+  color:azure;
+}
 
 .schedule {
   position: absolute;
@@ -243,9 +247,9 @@ a:visited {
 .logo {
   position: absolute;
   right: 0px;
-  top: 10px;
+  top: calc(10px * var(--size-coeff));
   width: calc(180px * var(--size-coeff));
-  height: calc(90px * var(--size-coeff));
+  height: calc(100px * var(--size-coeff));
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -254,17 +258,23 @@ a:visited {
   color: white;
 }
 
+.logo p{
+  line-height: calc(17px * var(--size-coeff));
+}
+
 .phone {
   font-family: "Montserrat-Bold";
   font-size: calc(18px * var(--size-coeff));
   position: absolute;
   right: calc(230px * var(--size-coeff));
   top: calc(15px * var(--size-coeff));
+  color: rgb(241, 237, 237);
 }
 
 .title {
   font-family: "Montserrat-Black";
-  font-size: calc(25px * var(--size-coeff));
+  font-size: calc(30px * var(--size-coeff));
+  color: rgb(224, 224, 224);
 }
 
 .block {
@@ -293,7 +303,7 @@ a:visited {
   line-height: calc(50px * var(--size-coeff));
   max-width: calc(1200px * var(--size-coeff));
   margin: auto;
-  margin-bottom: calc(80px * var(--size-coeff));
+  margin-bottom: calc(40px * var(--size-coeff));
 }
 
 .block-cards {
@@ -303,14 +313,13 @@ a:visited {
   gap: calc(100px * var(--size-coeff));
   width: 100%;
   height: 100%;
+  margin-top: calc(80px * var(--size-coeff));
   margin-bottom: calc(80px * var(--size-coeff));
 }
 
 .block-card {
   position: relative;
   margin: auto;
-  /* width: calc(1167px * var(--card-size-coeff) * var(--size-coeff));
-  height: calc(1401px * var(--card-size-coeff) * var(--size-coeff)); */
 }
 
 .block-card-img {
