--- a/source/o-nas/style.css
+++ b/source/o-nas/style.css
@@ -86,7 +86,6 @@ main {
 .contacts-row {
   margin-bottom: calc(36px * var(--size-coeff));
   position: relative;
-  /* padding-bottom: calc(20px * var(--size-coeff)); */
 }
 
 .contacts-img {
@@ -108,7 +107,7 @@ main {
 }
 
 .contacts-text {
-  font-size: calc(36px * var(--size-coeff));
+  font-size: calc(30px * var(--size-coeff));
   font-family: "Montserrat-Regular";
   color: #000000;
   margin-top: calc(50px * var(--size-coeff));
@@ -143,6 +142,10 @@ main {
   .services-view {
     margin: auto;
   } 
+
+  .contacts {
+    margin-top: calc(100px * var(--size-coeff));
+  }
 }
 
 @media (max-width: 768px) {
