--- a/common-style.css
+++ b/common-style.css
@@ -366,6 +366,12 @@ footer p {
   line-height: calc(80px * var(--size-coeff));
 }
 
+.map{
+  width: 100%;
+  height: 400px;
+  margin-bottom: calc(80px * var(--size-coeff));
+}
+
 @media (max-width: 950px) {
   .menu {
     display: none;
